# PredictorModel.Backend

./: AUTH0_SETUP.md  DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  LOCAL_DEVELOPMENT.md  PIPELINE_README.md  QUICK_START.md  README.md  TERRAFORM_SETUP_SUMMARY.md  docker-compose.yaml  setup-local-dev.sh  test_pipeline.py
backend/: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  README_AUTH.md  pyproject.toml
backend/app/: .coverage  main.py  test_main.py  tests.py
backend/app/auth/: __init__.py  config.py  dependencies.py  exceptions.py  management_api.py
backend/app/core/: auth.py  auth0_client.py  celery_app.py  config.py  redis.py
backend/app/models/: __init__.py  user.py
backend/app/pipeline/: __init__.py  limpieza_datos_uc.py  prediction_preparer.py  preprocesar_datos_semanales.py  test_pipeline.py
backend/app/predictor/: predict.py  test_predict.py
backend/app/retrain/: __init__.py  retrain.py
backend/app/routes/: __init__.py  auth.py  data.py  models.py  pipeline.py  predict.py  retrain.py  storage.py  test_weekly.py  users.py  weekly.py
backend/app/schemas/: __init__.py  user.py
backend/app/tasks/: __init__.py  pipeline_tasks.py
backend/app/tests/: test_WeeklyData.py  test_main.py  test_pipeline.py  test_redis.py  test_retrain.py  test_storage.py  test_tasks_pipeline.py  test_user.py  test_version.py  test_weekly.py
backend/app/types/: WeeklyComplexityData.py  WeeklyData.py
backend/app/utils/: complexities.py  storage.py  version.py
backend/data/: .gitkeep
backend/docs/: COMPLEXITY_LABELS.md
backend/models/: .gitignore  Alta.pkl  Baja.pkl  Media.pkl  Neonatología.pkl  feature_names.pkl  model_alta.json  model_alta_RF.json  model_pediatria.pkl  prophet_model.pkl  results_alta.json  results_baja.json  results_media.json  results_pediatría.json
backend/models/results/: Media.json  Neonatología.json
backend/src/: main.py  s3_client.py
backend/src/application/: dtos.py  use_cases.py
backend/src/domain/: entities.py  repositories.py  services.py
backend/src/infrastructure/: config.py  database.py  database_init.py  repositories.py  services.py
backend/src/pipeline/: __init__.py  data_cleaner.py  prediction_preparer.py  preprocesar_datos_semanales.py  weekly_data_preprocessing.py
backend/src/predictor/: __init__.py  predict.py  test_predict.py
backend/test/: .gitkeep
(+78 files in other folders)
