[project]
name = "backend"
version = "0.1.0"
description = "Backend con FastAPI y uv"
authors = [{ name = "Tu Nombre" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.118.0",
  "uvicorn>=0.37.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "python-multipart>=0.0.9",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]

[tool.uv]
# uv creará y manejará automáticamente un entorno virtual.
# Puedes agregar dependencias con "uv add"
