[project]
name = "backend"
version = "0.1.0"
description = "Backend con FastAPI y uv"
authors = [{ name = "Tu Nombre" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.118.0",
  "uvicorn>=0.37.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "python-multipart>=0.0.9",
  "numpy>=1.26.0",
  "boto3>=1.34.0",
  "python-dotenv>=1.0.0",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "httpx>=0.27.0",
  "pytest-cov>=5.0.0",
  "pluggy",
  "pygments",
  "iniconfig",
  "typing_extensions",
  "starlette",
  "annotated_doc",
  "pydantic",
  "pytz",
  "python-dateutil",
  "botocore",
  "et_xmlfile",
  "coverage",
  "joblib>=1.5.2",
  "prophet>=1.2.1",
  "scikit-learn>=1.7.2",
  "plotly>=6.3.1",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "httpx>=0.28.1",
  "pytest-asyncio>=1.2.0",
  "celery[redis]>=5.3.0",
  "redis>=5.0.0",
  "websockets>=12.0",
  "pydantic-settings>=2.0.0",
  "email-validator>=2.0.0",
]

[tool.uv]
# uv creará y manejará automáticamente un entorno virtual.
# Puedes agregar dependencias con "uv add"
